--- a/jamgate/pom.xml
+++ b/jamgate/pom.xml
@@ -19,5 +19,11 @@
       <artifactId>lujcluster</artifactId>
       <version>2.0.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>luj.net</groupId>
+      <artifactId>lujnet</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
